this is my first commit

--- a/week_5/Pillow library tutorial 1.ipynb
+++ b/week_5/Pillow library tutorial 1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "id": "29e0c4c0",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "id": "4561383f",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "id": "c9659c88",
    "metadata": {},
    "outputs": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "id": "c84dfefb",
    "metadata": {},
    "outputs": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "id": "d7438695",
    "metadata": {},
    "outputs": [],
@@ -87,11 +87,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "ea492b8e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# open the original image\n",
+    "original_img = Image.open(r\"boy.jpeg\")\n",
+    "\n",
+    "# Flip the original image vertically\n",
+    "vertical_img = original_img.transpose(method=Image.FLIP_TOP_BOTTOM)\n",
+    "vertical_img.save(\"vertical.png\")\n",
+    "\n",
+    "vertical_img.show()\n",
+    "\n",
+    "# close all our files object\n",
+    "original_img.close()\n",
+    "vertical_img.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "82102053",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Opens a image in RGB mode\n",
+    "im = Image.open(r\"boy.jpeg\")\n",
+    "\n",
+    "# Size of the image in pixels \n",
+    "# (size of original image)\n",
+    "# (This is not mandatory)\n",
+    "width, height = im.size\n",
+    "\n",
+    "# Setting the points for cropped image\n",
+    "left = 4\n",
+    "top = height / 5\n",
+    "right = 154\n",
+    "bottom = 3 * height / 5\n",
+    "\n",
+    "# Cropped image of above dimension\n",
+    "# (It will not change original image)\n",
+    "im1 = im.crop((left, top, right, bottom))\n",
+    "newsize = (600, 600)\n",
+    "im1 = im1.resize(newsize)\n",
+    "\n",
+    "# Shows the image in image viewer\n",
+    "im1.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "dae5ab67",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original size of the image\n",
+      "(2121, 1414)\n",
+      "\n",
+      "New size of the image\n",
+      "(40, 40)\n"
+     ]
+    }
+   ],
+   "source": [
+    "size = (40, 40)\n",
+    "img = Image.open(r\"boy.jpeg\")\n",
+    "\n",
+    "print(\"Original size of the image\")\n",
+    "print(img.size)\n",
+    "\n",
+    "# resizing the image\n",
+    "r_img = img.resize(size, resample = Image.BILINEAR)\n",
+    "\n",
+    "# resized_test.png => Destination_path\n",
+    "r_img.save(\"resized_test.jpg\")\n",
+    "\n",
+    "# Opening the new image\n",
+    "img = Image.open(r\"resized_test.jpg\")\n",
+    "\n",
+    "print(\"\\nNew size of the image\")\n",
+    "print(img.size)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "ddd5535b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# creating a object\n",
+    "image = Image.open(r\"boy.jpeg\")\n",
+    "image.load()\n",
+    "\n",
+    "# Splitting the image into individual\n",
+    "# bands\n",
+    "r, g, b, = image.split()\n",
+    "\n",
+    "# merge function used\n",
+    "im1 = Image.merge('RGB', (g, b, r))\n",
+    "im1.show()\n"
+   ]
   }
  ],
  "metadata": {
